# test-operator-list-targets

./: Cargo.toml
src/: main.rs
